# movieguessr

./: .gitignore  Cargo.toml  README.md
data/lists/: imdb-popular-100.txt  imdb-top-250.txt
src/: disk.rs  game.rs  main.rs  movie.rs  movie_manager.rs  omdb.rs  tmdb.rs
src/omdb/: client.rs  models.rs
src/tmdb/: client.rs  mod.rs  models.rs
